# gmail-automation

./: .gitignore  pyproject.toml
